--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -222,7 +222,7 @@ jobs:
           BAZEL_COMMAND: "build"
           BAZEL_TARGETS: "//rs/..."
           BAZEL_EXTRA_ARGS: "--keep_going --config=fuzzing --build_tag_filters=libfuzzer"
-          BUILDEVENT_APIKEY: ${{ secrets.BUILDEVENT_APIKEY }}
+          BUILDEVENT_APIKEY: ${{ secrets. HONEYCOMB_API_TOKEN }}
       - name: Upload bazel-bep
         # runs only if previous step succeeded or failed;
         # we avoid collecting artifacts of jobs that were cancelled
@@ -262,7 +262,7 @@ jobs:
           BAZEL_COMMAND: "build"
           BAZEL_TARGETS: "//rs/..."
           BAZEL_EXTRA_ARGS: "--keep_going --config=afl"
-          BUILDEVENT_APIKEY: ${{ secrets.BUILDEVENT_APIKEY }}
+          BUILDEVENT_APIKEY: ${{ secrets. HONEYCOMB_API_TOKEN }}
       - name: Upload bazel-bep
         # runs only if previous step succeeded or failed;
         # we avoid collecting artifacts of jobs that were cancelled
@@ -444,7 +444,7 @@ jobs:
           github.event_name == 'workflow_dispatch'
         shell: bash
         env:
-          BUILDEVENT_APIKEY: ${{ secrets.BUILDEVENT_APIKEY }}
+          BUILDEVENT_APIKEY: ${{ secrets. HONEYCOMB_API_TOKEN }}
         run: |
           set -eExuo pipefail
           buildevents cmd "$CI_RUN_ID" "$CI_JOB_NAME" build-command -- \
@@ -483,7 +483,7 @@ jobs:
           github.event_name == 'workflow_dispatch'
         shell: bash
         env:
-          BUILDEVENT_APIKEY: ${{ secrets.BUILDEVENT_APIKEY }}
+          BUILDEVENT_APIKEY: ${{ secrets. HONEYCOMB_API_TOKEN }}
         run: |
           set -eExuo pipefail
           buildevents cmd "$CI_RUN_ID" "$CI_JOB_NAME" build-command -- \
