--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -198,7 +198,7 @@ jobs:
           BAZEL_COMMAND: "build"
           BAZEL_TARGETS: "//rs/..."
           BAZEL_EXTRA_ARGS: "--keep_going --config=fuzzing --build_tag_filters=libfuzzer"
-          BUILDEVENT_APIKEY: ${{ secrets.BUILDEVENT_APIKEY }}
+          BUILDEVENT_APIKEY: ${{ secrets. HONEYCOMB_API_TOKEN }}
       - <<: *bazel-bep
 
   bazel-build-fuzzers-afl:
@@ -214,7 +214,7 @@ jobs:
           BAZEL_COMMAND: "build"
           BAZEL_TARGETS: "//rs/..."
           BAZEL_EXTRA_ARGS: "--keep_going --config=afl"
-          BUILDEVENT_APIKEY: ${{ secrets.BUILDEVENT_APIKEY }}
+          BUILDEVENT_APIKEY: ${{ secrets. HONEYCOMB_API_TOKEN }}
       - <<: *bazel-bep
 
   python-ci-tests:
@@ -348,7 +348,7 @@ jobs:
           github.event_name == 'workflow_dispatch'
         shell: bash
         env:
-          BUILDEVENT_APIKEY: ${{ secrets.BUILDEVENT_APIKEY }}
+          BUILDEVENT_APIKEY: ${{ secrets. HONEYCOMB_API_TOKEN }}
         run: |
           set -eExuo pipefail
           buildevents cmd "$CI_RUN_ID" "$CI_JOB_NAME" build-command -- \
@@ -379,7 +379,7 @@ jobs:
           github.event_name == 'workflow_dispatch'
         shell: bash
         env:
-          BUILDEVENT_APIKEY: ${{ secrets.BUILDEVENT_APIKEY }}
+          BUILDEVENT_APIKEY: ${{ secrets. HONEYCOMB_API_TOKEN }}
         run: |
           set -eExuo pipefail
           buildevents cmd "$CI_RUN_ID" "$CI_JOB_NAME" build-command -- \
