--- a/rs/drun/Cargo.toml
+++ b/rs/drun/Cargo.toml
@@ -7,7 +7,7 @@ description.workspace = true
 documentation.workspace = true
 
 [dependencies]
-clap = { version = "3.2.25", features = ["derive"] }
+clap = { workspace = true }
 futures.workspace = true
 hex = { workspace = true }
 ic-canister-sandbox-backend-lib = { path = "../canister_sandbox" }
