XC-206: use multi_rpc_result from evm_rpc_types crate

--- a/rs/ethereum/evm-rpc-client/BUILD.bazel
+++ b/rs/ethereum/evm-rpc-client/BUILD.bazel
@@ -18,7 +18,7 @@ rust_library(
         "@crate_index//:ic-cdk",
         "@crate_index//:serde",
         "@crate_index//:thiserror",
-        "//rs/ethereum/evm-rpc-types",
+        "//rs/ethereum/evm-rpc-types:evm_rpc_types",
     ],
 )
 
