--- a/Cargo.toml
+++ b/Cargo.toml
@@ -655,7 +655,7 @@ slog-scope = "4.4.0"
 slog-term = "2.9.1"
 socket2 = { version = "0.5.7", features = ["all"] }
 static_assertions = "1.1.0"
-strum = "0.26.3"
+strum = { version = "0.26.3", default-features = false }
 strum_macros = "0.26.4"
 syn = { version = "1.0.109", features = ["fold", "full"] }
 sync_wrapper = "1.0.1"
