--- a/rs/artifact_pool/BUILD.bazel
+++ b/rs/artifact_pool/BUILD.bazel
@@ -73,7 +73,7 @@ rust_binary(
     proc_macro_deps = MACRO_DEPENDENCIES,
     deps = DEPENDENCIES + [
         ":artifact_pool",
-        "@crate_index//:clap_3_2_25",
+        "@crate_index//:clap",
         "@crate_index//:serde-bytes-repr",
         "@crate_index//:serde_json",
     ],
