--- a/rs/artifact_pool/Cargo.toml
+++ b/rs/artifact_pool/Cargo.toml
@@ -9,7 +9,7 @@ documentation.workspace = true
 [dependencies]
 bincode = { workspace = true }
 byteorder = "1.3.4"
-clap = { version = "3.2.25", features = ["derive"] }
+clap = { workspace = true }
 ic-config = { path = "../config" }
 ic-interfaces = { path = "../interfaces" }
 ic-logger = { path = "../monitoring/logger" }
