--- a/rs/ledger_suite/icp/BUILD.bazel
+++ b/rs/ledger_suite/icp/BUILD.bazel
@@ -207,10 +207,12 @@ rust_ic_test_suite(
     deps = [
         # Keep sorted.
         ":icp_ledger",
+        "//rs/ledger_suite/common/ledger_core",
         "//rs/ledger_suite/icp/index:ic-icp-index",
         "//rs/ledger_suite/icp/test_utils",
         "//rs/nns/constants",
         "//rs/nns/test_utils/golden_nns_state",
+        "//rs/rust_canisters/canister_test",
         "//rs/state_machine_tests",
         "//rs/types/base_types",
         "@crate_index//:candid",
