--- a/ic-os/guestos/envs/dev/BUILD.bazel
+++ b/ic-os/guestos/envs/dev/BUILD.bazel
@@ -7,6 +7,7 @@ load("//ic-os/guestos:defs.bzl", "image_deps")
 #    or //ic-os/defs.bzl for the full list of targets.
 icos_build(
     name = "dev",
+    experimental_simplified_build = True,
     ic_version = "//bazel:rc_only_version.txt",
     image_deps_func = image_deps,
     upload_prefix = "guest-os",
