--- a/rs/ethereum/ledger-suite-orchestrator/test_utils/Cargo.toml
+++ b/rs/ethereum/ledger-suite-orchestrator/test_utils/Cargo.toml
@@ -17,6 +17,7 @@ ic-management-canister-types = { path = "../../../types/management_canister_type
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
 ic-universal-canister = { path = "../../../universal_canister/lib" }
 icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
+num-traits = {workspace = true}
 paste = "1.0.12"
 pocket-ic = { path = "../../../../packages/pocket-ic" }
 proptest = { workspace = true }
