--- a/rs/ingress_manager/BUILD.bazel
+++ b/rs/ingress_manager/BUILD.bazel
@@ -107,6 +107,7 @@ rust_ic_bench(
         "//rs/types/management_canister_types",
         "//rs/types/types",
         "@crate_index//:criterion",
+        "@crate_index//:pprof",
         "@crate_index//:rand",
         "@crate_index//:tokio",
     ],
@@ -144,6 +145,7 @@ rust_ic_bench(
         "//rs/test_utilities/types",
         "//rs/types/types",
         "@crate_index//:criterion",
+        "@crate_index//:pprof",
         "@crate_index//:rand",
         "@crate_index//:tokio",
     ],
