--- a/rs/ingress_manager/Cargo.toml
+++ b/rs/ingress_manager/Cargo.toml
@@ -40,6 +40,7 @@ ic-test-utilities-registry = { path = "../test_utilities/registry" }
 ic-test-utilities-state = { path = "../test_utilities/state" }
 ic-test-utilities-time = { path = "../test_utilities/time" }
 ic-test-utilities-types = { path = "../test_utilities/types" }
+pprof = { workspace = true }
 proptest = { workspace = true }
 rand = { workspace = true }
 tokio = { workspace = true }
