--- a/rs/rosetta-api/icp/test_utils/BUILD.bazel
+++ b/rs/rosetta-api/icp/test_utils/BUILD.bazel
@@ -6,6 +6,7 @@ DEPENDENCIES = [
     # Keep sorted.
     "//rs/ledger_suite/icp:icp_ledger",
     "//rs/ledger_suite/icrc1/test_utils",
+    "//rs/pocket_ic_tests",
     "//rs/rosetta-api/common/rosetta_core:rosetta-core",
     "//rs/rosetta-api/icp:ic-rosetta-api",
     "//rs/rosetta-api/icp:rosetta-api",
