--- a/rs/ledger_suite/icp/test_utils/BUILD.bazel
+++ b/rs/ledger_suite/icp/test_utils/BUILD.bazel
@@ -16,6 +16,7 @@ rust_library(
         "//rs/ledger_suite/icp:icp_ledger",
         "//rs/ledger_suite/icp/index:ic-icp-index",
         "//rs/nns/constants",
+        "//rs/pocket_ic_tests",
         "//rs/rust_canisters/canister_test",
         "//rs/rust_canisters/dfn_protobuf",
         "//rs/rust_canisters/on_wire",
