--- a/rs/ledger_suite/icrc1/index-ng/BUILD.bazel
+++ b/rs/ledger_suite/icrc1/index-ng/BUILD.bazel
@@ -124,6 +124,7 @@ rust_test(
             "//rs/ledger_suite/icrc1/test_utils",
             "//rs/ledger_suite/icrc1/tokens_u64",
             "//rs/ledger_suite/tests/sm-tests",
+            "//rs/pocket_ic_tests",
             "//rs/registry/subnet_type",
             "//rs/rosetta-api/icp/test_utils",
             "//rs/rust_canisters/http_types",
