--- a/rs/ledger_suite/icrc1/ledger/BUILD.bazel
+++ b/rs/ledger_suite/icrc1/ledger/BUILD.bazel
@@ -225,6 +225,7 @@ rust_test(
             "//rs/ledger_suite/common/ledger_canister_core",
             "//rs/ledger_suite/common/ledger_core",
             "//rs/ledger_suite/icrc1/test_utils",
+            "//rs/pocket_ic_tests",
             "//rs/rust_canisters/dfn_http_metrics",
             "//rs/test_utilities/load_wasm",
             "//rs/types/base_types",
