--- a/rs/ledger_suite/tests/sm-tests/BUILD.bazel
+++ b/rs/ledger_suite/tests/sm-tests/BUILD.bazel
@@ -11,6 +11,7 @@ DEPENDENCIES = [
     "//rs/ledger_suite/icrc1",
     "//rs/ledger_suite/icrc1/ledger",
     "//rs/ledger_suite/icrc1/test_utils",
+    "//rs/pocket_ic_tests",
     "//rs/rosetta-api/icp/test_utils",
     "//rs/rust_canisters/http_types",
     "//rs/types/base_types",
