--- a/rs/nns/test_utils/golden_nns_state/Cargo.toml
+++ b/rs/nns/test_utils/golden_nns_state/Cargo.toml
@@ -10,4 +10,5 @@ ic-registry-routing-table = { path = "../../../registry/routing_table" }
 ic-registry-subnet-type = { path = "../../../registry/subnet_type" }
 ic-pocket-ic-tests = { path = "../../../pocket_ic_tests" }
 ic-types = { path = "../../../types/types" }
+pocket-ic = { path = "../../../../packages/pocket-ic" }
 tempfile = { workspace = true }
