--- a/rs/pocket_ic_tests/Cargo.toml
+++ b/rs/pocket_ic_tests/Cargo.toml
@@ -9,6 +9,8 @@ documentation.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ic-config = { path = "../config" }
 ic-registry-routing-table = { path = "../registry/routing_table" }
 ic-registry-subnet-type = { path = "../registry/subnet_type" }
 ic-state-machine-tests = { path = "../state_machine_tests" }
+pocket-ic = { path = "../../packages/pocket-ic" }
