XC-204: migration of minter test

--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -204,14 +204,15 @@ rust_binary(
             ":minter",
             "//packages/ic-ethereum-types",
             "//packages/icrc-ledger-types:icrc_ledger_types",
+            "//packages/pocket-ic",
             "//rs/ethereum/cketh/test_utils",
             "//rs/ethereum/ledger-suite-orchestrator/test_utils",
-            "//rs/state_machine_tests",
             "//rs/types/base_types",
             "@crate_index//:assert_matches",
             "@crate_index//:candid",
             "@crate_index//:ethers-core",
             "@crate_index//:hex",
+            "@crate_index//:ic-cdk",
             "@crate_index//:num-bigint",
             "@crate_index//:num-traits",
             "@crate_index//:serde",
