--- a/rs/pocket_ic_tests/BUILD.bazel
+++ b/rs/pocket_ic_tests/BUILD.bazel
@@ -4,6 +4,8 @@ package(default_visibility = ["//visibility:public"])
 
 DEPENDENCIES = [
     # Keep sorted.
+    "//packages/pocket-ic",
+    "//rs/config",
     "//rs/registry/routing_table",
     "//rs/registry/subnet_type",
     "//rs/state_machine_tests",
