--- a/rs/nns/test_utils/golden_nns_state/BUILD.bazel
+++ b/rs/nns/test_utils/golden_nns_state/BUILD.bazel
@@ -4,6 +4,7 @@ package(default_visibility = ["//visibility:public"])
 
 DEPENDENCIES = [
     # Keep sorted.
+    "//packages/pocket-ic",
     "//rs/config",
     "//rs/pocket_ic_tests",
     "//rs/registry/routing_table",
