--- a/ic-os/components/hostos-scripts/verbose-logging/verbose-logging.service
+++ b/ic-os/components/hostos-scripts/verbose-logging/verbose-logging.service
@@ -5,7 +5,7 @@ After=guestos.service
 
 [Service]
 ExecStart=/opt/ic/bin/verbose-logging.sh
-Restart=always
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
