--- a/packages/icrc-ledger-types/Cargo.toml
+++ b/packages/icrc-ledger-types/Cargo.toml
@@ -21,7 +21,8 @@ num-traits = { workspace = true }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
 sha2 = { workspace = true }
-strum = { workspace = true}
+strum = { workspace = true }
+strum_macros = { workspace = true }
 time = { workspace = true }
 
 [dev-dependencies]
