--- a/packages/icrc-ledger-types/BUILD.bazel
+++ b/packages/icrc-ledger-types/BUILD.bazel
@@ -26,6 +26,7 @@ rust_library(
         "@crate_index//:serde_bytes",
         "@crate_index//:sha2",
         "@crate_index//:strum",
+        "@crate_index//:strum_macros",
         "@crate_index//:time",
     ],
 )
