--- a/rs/execution_environment/tools/BUILD.bazel
+++ b/rs/execution_environment/tools/BUILD.bazel
@@ -12,7 +12,7 @@ rust_binary(
         "//rs/replicated_state",
         "//rs/system_api",
         "//rs/types/types",
-        "@crate_index//:clap_3_2_25",
+        "@crate_index//:clap",
         "@crate_index//:eyre",
         "@crate_index//:serde_json",
     ],
