--- a/rs/ethereum/evm-rpc-client/BUILD.bazel
+++ b/rs/ethereum/evm-rpc-client/BUILD.bazel
@@ -13,8 +13,8 @@ rust_library(
     ],
     deps = [
         # Keep sorted.
-        "//rs/ethereum/evm-rpc-types:evm_rpc_types",
         "@crate_index//:candid",
+        "@crate_index//:evm_rpc_types",
         "@crate_index//:ic-canister-log",
         "@crate_index//:ic-cdk",
         "@crate_index//:serde",
