--- a/packages/icrc-ledger-types/BUILD.bazel
+++ b/packages/icrc-ledger-types/BUILD.bazel
@@ -12,6 +12,9 @@ rust_library(
     srcs = glob(
         ["src/**"],
     ),
+    proc_macro_deps = [
+        "@crate_index//:strum_macros",
+    ],
     deps = [
         # Keep sorted.
         "@crate_index//:base32",
