XC-206: fix Pocket IC

--- a/packages/pocket-ic/Cargo.toml
+++ b/packages/pocket-ic/Cargo.toml
@@ -24,7 +24,7 @@ base64 = "^0.13.1"
 candid = "^0.10.2"
 hex = { workspace = true }
 ic-agent = { workspace = true }
-ic-cdk = "0.13.5"
+ic-cdk = { workspace = true }
 ic-transport-types = { workspace = true }
 reqwest = { workspace = true }
 schemars = "0.8.16"
