--- a/rs/registry/helpers/BUILD.bazel
+++ b/rs/registry/helpers/BUILD.bazel
@@ -5,6 +5,7 @@ package(default_visibility = ["//visibility:public"])
 DEPENDENCIES = [
     # Keep sorted.
     "//rs/interfaces/registry",
+    "//rs/limits",
     "//rs/protobuf",
     "//rs/registry/keys",
     "//rs/registry/proto",
