--- a/rs/registry/canister/Cargo.toml
+++ b/rs/registry/canister/Cargo.toml
@@ -19,6 +19,7 @@ dfn_core = { path = "../../rust_canisters/dfn_core" }
 dfn_http_metrics = { path = "../../rust_canisters/dfn_http_metrics" }
 futures = { workspace = true }
 ic-base-types = { path = "../../types/base_types/" }
+ic-limits = "0.3.1"
 ic-certified-map = "0.3.1"
 ic-cdk = { workspace = true }
 ic-crypto-node-key-validation = { path = "../../crypto/node_key_validation" }
