--- a/rs/test_utilities/registry/BUILD.bazel
+++ b/rs/test_utilities/registry/BUILD.bazel
@@ -7,6 +7,7 @@ DEPENDENCIES = [
     "//rs/crypto/test_utils/ni-dkg",
     "//rs/interfaces",
     "//rs/interfaces/registry",
+    "//rs/limits",
     "//rs/protobuf",
     "//rs/registry/fake",
     "//rs/registry/keys",
