--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -150,3 +150,10 @@ genrule(
     outs = ["pocket-ic"],
     cmd = "gunzip -c $< > $@",
 )
+
+genrule(
+    name = "pocket-ic-server-v6",
+    srcs = ["@pocket-ic-server-v6//file"],
+    outs = ["pocket-ic-v6"],
+    cmd = "gunzip -c $< > $@",
+)
