--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -702,9 +702,11 @@ http_file(
 )
 
 # Haskell toolchain for spec_compliance tests
-
+# (patched to work around https://github.com/tweag/rules_haskell/issues/2254)
 http_archive(
     name = "rules_haskell",
+    patch_args = ["-p1"],
+    patches = ["//bazel:rules_haskell.patch"],
     sha256 = "4cae22bc84f327bf3cb7605021c3663160ff6bc8a0b7b6266062366bcbd19e79",
     strip_prefix = "rules_haskell-1.0",
     urls = ["https://github.com/tweag/rules_haskell/releases/download/v1.0/rules_haskell-1.0.tar.gz"],
