Change how the build time is calculated
Previously, we computed the build time when building the SetupOS base image. We're trying to move away from base images and want to be able to build the entire OS directly from source, therefore a new solution is required for reproducibility which does not take the current time into account. The new approach uses the commit timestamp.

This approach assumes/requires that commits are fairly regular. We currently check that the build time (or commit time after this change) is not older than 6 weeks.

--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -79,6 +79,17 @@ ic_version_or_git_sha(
     visibility = ["//visibility:public"],
 )
 
+genrule(
+    name = "commit_timestamp_txt",
+    outs = ["commit_timestamp.txt"],
+    cmd = "git show -s --format=%ct > $@",
+    tags = [
+        "local",
+        "no-cache",
+    ],
+    visibility = ["//visibility:public"],
+)
+
 sh_binary(
     name = "ic_version_or_git_sha_sh",
     srcs = ["ic_version_or_git_sha.sh"],
