--- a/rs/orchestrator/BUILD.bazel
+++ b/rs/orchestrator/BUILD.bazel
@@ -46,7 +46,7 @@ rust_library(
         "//rs/types/types",
         "@crate_index//:backoff",
         "@crate_index//:candid",
-        "@crate_index//:clap_3_2_25",
+        "@crate_index//:clap",
         "@crate_index//:exec",
         "@crate_index//:get_if_addrs",
         "@crate_index//:hex",
@@ -78,7 +78,7 @@ rust_binary(
         # Keep sorted.
         ":lib",
         "//rs/async_utils",
-        "@crate_index//:clap_3_2_25",
+        "@crate_index//:clap",
         "@crate_index//:tokio",
     ],
 )
