--- a/rs/orchestrator/Cargo.toml
+++ b/rs/orchestrator/Cargo.toml
@@ -10,7 +10,7 @@ documentation.workspace = true
 async-trait = { workspace = true }
 backoff = { workspace = true }
 candid = { workspace = true }
-clap = { version = "3.2.25", features = ["derive"] }
+clap = { workspace = true }
 exec = "0.3.1"
 get_if_addrs = "0.5.3"
 hex = { workspace = true }
