--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -98,8 +98,10 @@ load("@rules_oci//oci:pull.bzl", "oci_pull")
 load("//bazel:mainnet-canisters.bzl", "canisters")
 load("//third_party/lmdb:repository.bzl", "lmdb_repository")
 
-# We use inconsistent filenames and repository references, so we perform a lot
-# of remapping
+# We cannot derive the Bazel repository names (e.g. @mainnet_nns_registry_canister) directly
+# from the canister names because we use inconsistent repo names. Same goes for filenames.
+# For each new canister defined in the source JSON file (see `path`) a mapping can be added
+# from canister name (as per JSON) to filename (and to repo name, resp.).
 canisters(
     name = "canisters",
     filenames = {
