--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -189,6 +189,7 @@ rust_binary(
             "//rs/ledger_suite/icrc1/archive:archive_canister_u256.wasm.gz",
             "//rs/ledger_suite/icrc1/index-ng:index_ng_canister_u256.wasm.gz",
             "//rs/ledger_suite/icrc1/ledger:ledger_canister_u256.wasm.gz",
+            "//:pocket-ic-server",
         ] + extra_data,
         env = {
             "CARGO_MANIFEST_DIR": "rs/ethereum/cketh/minter",
@@ -197,6 +198,7 @@ rust_binary(
             "LEDGER_CANISTER_WASM_PATH": "$(rootpath //rs/ledger_suite/icrc1/ledger:ledger_canister_u256.wasm.gz)",
             "INDEX_CANISTER_WASM_PATH": "$(rootpath //rs/ledger_suite/icrc1/index-ng:index_ng_canister_u256.wasm.gz)",
             "LEDGER_ARCHIVE_NODE_CANISTER_WASM_PATH": "$(rootpath //rs/ledger_suite/icrc1/archive:archive_canister_u256.wasm.gz)",
+            "POCKET_IC_BIN": "$(rootpath //:pocket-ic-server)",
         } | extra_env,
         proc_macro_deps = [],
         deps = [
