feat(PocketIC): topology endpoint at /_/topology

--- a/rs/pocket_ic_server/Cargo.toml
+++ b/rs/pocket_ic_server/Cargo.toml
@@ -88,5 +88,6 @@ ic-nns-constants = { path = "../nns/constants" }
 rcgen = { workspace = true }
 registry-canister = { path = "../registry/canister" }
 reqwest = { workspace = true }
+serde_json = { workspace = true }
 spec-compliance = { path = "../tests/testing_verification/spec_compliance" }
 slog = { workspace = true }
