--- a/rs/pocket_ic_server/BUILD.bazel
+++ b/rs/pocket_ic_server/BUILD.bazel
@@ -102,6 +102,7 @@ TEST_DEPENDENCIES = [
     "@crate_index//:rcgen",
     "@crate_index//:reqwest",
     "@crate_index//:serde",
+    "@crate_index//:serde_json",
     "@crate_index//:slog",
     "@crate_index//:tempfile",
     "@crate_index//:tokio",
