refactor: Add tool run_in_namespace
NODE-1464

This tool allows running a command in a separate Linux namespace, optionally under chroot. Optionally, it also sets up the required mounts.

The implementation was taken from [https://github.com/archlinux/arch-install-scripts/blob/master/run_with_chroot.in](Arch Linux) and customized for our use case of building the IC-OS.

--- a/toolchains/sysimage/BUILD.bazel
+++ b/toolchains/sysimage/BUILD.bazel
@@ -45,3 +45,8 @@ sh_binary(
     name = "proc_wrapper",
     srcs = ["proc_wrapper.sh"],
 )
+
+sh_binary(
+    name = "run_in_namespace",
+    srcs = ["run_in_namespace.sh"],
+)
