--- a/.github/workflows/slack-workflow-run.yml
+++ b/.github/workflows/slack-workflow-run.yml
@@ -13,6 +13,7 @@ on:
       - Schedule Rust Benchmarks
       - Schedule Weekly
       - Release Testing
+      - Publish Release
       - Container IC Base Images
 
 jobs:
