test(IDX): do not run _head_nns variants on nightly for nightly-only tests

--- a/rs/tests/message_routing/BUILD.bazel
+++ b/rs/tests/message_routing/BUILD.bazel
@@ -65,6 +65,7 @@ system_test_nns(
     env = {
         "STATESYNC_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/statesync_test:statesync_test_canister)",
     },
+    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS.
     malicious = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
