--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -22,12 +22,6 @@ filegroup(
     visibility = ["//visibility:public"],
 )
 
-# TODO XC-206: change version in WORKSPACE.bazel
-filegroup(
-    name = "new_evm_rpc.wasm.gz",
-    srcs = ["evm_rpc.wasm.gz"],
-)
-
 rust_library(
     name = "minter",
     srcs = glob(
@@ -229,8 +223,8 @@ rust_binary(
         ("", [], {}),
         (
             "_evm_rpc",
-            [":new_evm_rpc.wasm.gz"],
-            {"EVM_RPC_CANISTER_WASM_PATH": "$(rootpath :new_evm_rpc.wasm.gz)"},
+            ["@evm_rpc.wasm.gz//file"],
+            {"EVM_RPC_CANISTER_WASM_PATH": "$(rootpath @evm_rpc.wasm.gz//file)"},
         ),
     ]
 ]
