--- a/rs/tests/message_routing/xnet/BUILD.bazel
+++ b/rs/tests/message_routing/xnet/BUILD.bazel
@@ -26,7 +26,7 @@ system_test_nns(
     env = {
         "XNET_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/xnet_test:xnet-test-canister)",
     },
-    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS.
+    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS canisters.
     flaky = False,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -44,7 +44,7 @@ system_test_nns(
     env = {
         "XNET_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/xnet_test:xnet-test-canister)",
     },
-    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS.
+    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS canisters.
     flaky = False,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -62,7 +62,7 @@ system_test_nns(
     env = {
         "XNET_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/xnet_test:xnet-test-canister)",
     },
-    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS.
+    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS canisters.
     flaky = False,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -98,7 +98,7 @@ system_test_nns(
     env = {
         "XNET_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/xnet_test:xnet-test-canister)",
     },
-    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS.
+    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS canisters.
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
         "system_test_nightly",
