--- a/rs/tests/message_routing/BUILD.bazel
+++ b/rs/tests/message_routing/BUILD.bazel
@@ -49,7 +49,7 @@ system_test_nns(
     env = {
         "STATESYNC_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/statesync_test:statesync_test_canister)",
     },
-    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS.
+    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS canisters.
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
         "k8s",
@@ -66,7 +66,7 @@ system_test_nns(
     env = {
         "STATESYNC_TEST_CANISTER_WASM_PATH": "$(rootpath //rs/rust_canisters/statesync_test:statesync_test_canister)",
     },
-    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS.
+    extra_head_nns_tags = ["manual"],  # only run this test with the mainnet NNS canisters.
     malicious = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
